--- a/frontend/src/app/media/dialogs/edit-filter-dialog/edit-filter-dialog.component.html
+++ b/frontend/src/app/media/dialogs/edit-filter-dialog/edit-filter-dialog.component.html
@@ -4,7 +4,7 @@
     <!-- View Name -->
     <div class="form-group">
       <label for="filter_name">Label</label>
-      <input id="filter_name" [field]="customFilterForm.filter_name" />
+      <input id="filter_name" [formField]="customFilterForm.filter_name" />
     </div>
 
     <!-- Filters Array -->
@@ -13,7 +13,7 @@
       @for (filter of customFilterForm.filters; let i = $index; track i) {
         <div class="filter-group">
           <!-- Filter By -->
-          <select id="filter_by_{{ i }}" [field]="filter.filter_by" (change)="onFilterByChange(filter)">
+          <select id="filter_by_{{ i }}" [formField]="filter.filter_by" (change)="onFilterByChange(filter)">
             <option value="" disabled>Select Filter By</option>
             @for (filter of filterKeys; track filter) {
               <option [value]="filter">
@@ -23,7 +23,7 @@
           </select>
 
           <!-- Filter Condition -->
-          <select id="filter_condition_{{ i }}" [field]="filter.filter_condition" (change)="onFilterConditionChange(filter)">
+          <select id="filter_condition_{{ i }}" [formField]="filter.filter_condition" (change)="onFilterConditionChange(filter)">
             <option value="" disabled>Select Condition</option>
             @for (condition of getFilterConditions(filter.filter_by().value()); track condition) {
               <option [value]="condition">
@@ -35,20 +35,20 @@
           <!-- Filter Value -->
           @switch (getFilterValueType(filter.filter_by().value(), filter.filter_condition().value())) {
             @case ('string') {
-              <input id="filter_value_{{ i }}" type="text" [field]="filter.filter_value" />
+              <input id="filter_value_{{ i }}" type="text" [formField]="filter.filter_value" />
             }
             @case ('number') {
-              <input id="filter_value_{{ i }}" type="number" [field]="filter.filter_value" />
+              <input id="filter_value_{{ i }}" type="number" [formField]="filter.filter_value" />
             }
             @case ('number_days') {
-              <input id="filter_value_{{ i }}" type="number" placeholder="days" [field]="filter.filter_value" />
+              <input id="filter_value_{{ i }}" type="number" placeholder="days" [formField]="filter.filter_value" />
               <span> days</span>
             }
             @case ('date') {
-              <input id="filter_value_{{ i }}" type="date" [field]="filter.filter_value" />
+              <input id="filter_value_{{ i }}" type="date" [formField]="filter.filter_value" />
             }
             @case ('boolean') {
-              <select id="filter_value_{{ i }}" [field]="filter.filter_value">
+              <select id="filter_value_{{ i }}" [formField]="filter.filter_value">
                 <option value="" disabled>Select Value</option>
                 <option value="true">True</option>
                 <option value="false">False</option>
@@ -75,8 +75,12 @@
     </div>
     <div class="buttons-row">
       <!-- Submit button -->
-      <button type="submit" class="primary" [disabled]="!customFilterForm().dirty() || customFilterForm().invalid() || customFilterForm().submitting()">
-        {{ customFilterForm().submitting() ? 'Saving...' : (customFilter() ? 'Update' : 'Create') }}
+      <button
+        type="submit"
+        class="primary"
+        [disabled]="!customFilterForm().dirty() || customFilterForm().invalid() || customFilterForm().submitting()"
+      >
+        {{ customFilterForm().submitting() ? 'Saving...' : customFilter() ? 'Update' : 'Create' }}
       </button>
 
       <!-- Button to Cancel Dialog -->
@@ -84,7 +88,7 @@
     </div>
   </form>
   @if (submitResult().message) {
-    <p class="submit-result {{submitResult().type}}">{{ submitResult().message }}</p>
+    <p class="submit-result {{ submitResult().type }}">{{ submitResult().message }}</p>
     @if (submitResult().type === 'success') {
       <div class="close-progress"></div>
     }
